# Next-Gen-Expense-Management

./: .env.example  .gitignore  DESIGN_SYSTEM.md  GENERATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  SETUP.md  TECH_STACK.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AnimatedCard.jsx  ErrorState.jsx  Footer.jsx  LoadingSpinner.jsx  Navigation.jsx  StatCard.jsx
frontend/src/components/3D/: DataOrbit.jsx  FloatingOrbs.jsx
frontend/src/components/Charts/: CategoryChart.jsx
frontend/src/pages/: Dashboard.jsx  Results.jsx  Upload.jsx
server/: Dockerfile  PEFT_pipeline.py  api.py  crew_pipeline.py  cuda_verification.py  main.py  model_loader.py  pipeline_runner.py  pyproject.toml  requirements.txt  setup.py
server/agents/: expense_validator.py  policy_parser.py  report_agent.py
server/data/: expenses.xlsx  first_20_rows.xlsx
server/outputs/: categorized.json  final_report.txt
