[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crewai>=1.6.1",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "langchain>=1.2.7",
    "langchain-groq>=1.1.1",
    "litellm>=1.81.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "pypdf>=6.6.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.7.1",
    "transformers>=4.57.6",
    "uvicorn>=0.40.0",
]
